fixed logo dimensions to prevent CLS (cumulative layout shift)

--- a/web/src/App.less
+++ b/web/src/App.less
@@ -67,7 +67,9 @@ header {
         font-size: 1.5rem;
         img {
             height: 2rem;
+            width: 2rem;
             padding-right: 0.5rem;
+            box-sizing: content-box;
         }
     }
     #network-selector {
@@ -126,8 +128,5 @@ nav {
     }
     @media (max-width: @mobile-width) {
         min-width: auto;
-    }
-    .logo {
-        height: 2rem;
     }
 }
